SIMPLE - Added slider and styles

--- a/css/app.css
+++ b/css/app.css
@@ -10,6 +10,7 @@
 }
 body { font-family: 'helveticaneuelight', sans-serif; }
 
+.header { box-shadow: 1px 1px 15px #aaa; transform: rotate(-1deg); }
 .page-header { margin: 0; padding: 0; text-align: center; }
 .logo { float: left; margin: 0 15px 0 0; }
 .home-link { padding: 5px 15px; }
