--- a/view/page/header.phtml
+++ b/view/page/header.phtml
@@ -1,25 +1,33 @@
-<div class="page-header">
-    <img src="img/header.jpg" width="100%"/>
+<div class="header">
+    <ul class="page-header bxslider">
+            <li><img src="img/header.jpg" width="100%"/></li>
+            <li><img src="img/header2.jpg" width="100%"/></li>
+            <li><img src="img/header3.jpg" width="100%"/></li>
+            <li><img src="img/header4.jpg" width="100%"/></li>
+            <li><img src="img/header5.jpg" width="100%"/></li>
+            <li><img src="img/header6.jpg" width="100%"/></li>
+            <li><img src="img/header7.jpg" width="100%"/></li>
+    </ul>
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+            <a class="navbar-brand home-link" href="index"><img src="img/logo.png" width="100px" /></a>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="nav-ios active"><a href="ios">iOS</a></li>
+                <li class="nav-android"><a href="android">Android</a></li>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Parent<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">First</a></li>
+                        <li><a href="#">Second</a></li>
+                        <li><a href="#">Third</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Fourth</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Fifth Last</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
-<nav class="navbar navbar-default" role="navigation">
-    <div class="navbar-header">
-        <a class="navbar-brand home-link" href="index"><img src="img/logo.png" width="100px" /></a>
-    </div>
-    <div>
-        <ul class="nav navbar-nav">
-            <li class="nav-ios active"><a href="ios">iOS</a></li>
-            <li class="nav-android"><a href="android">Android</a></li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Parent<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">First</a></li>
-                    <li><a href="#">Second</a></li>
-                    <li><a href="#">Third</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Fourth</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Fifth Last</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-</nav>
