--- a/view/page/page.phtml
+++ b/view/page/page.phtml
@@ -17,6 +17,7 @@
     
     <!-- App -->
     <link href="css/app.css" rel="stylesheet">
+    <link href="css/jquery.bxslider.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
@@ -32,9 +33,18 @@
     <!-- /Footer -->
     
     <input type="hidden" id="page" value="<?php echo $this->path; ?>" />
+    
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script
-        src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="js/jquery.bxslider.min.js"></script>
+    <script>
+    $(document).ready(function(){
+          $('.bxslider').bxSlider({
+              pager: false
+          });
+    });
+    </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
